#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.6])
AC_INIT([pkudsalgo-week05], [1.0], [perillaroc])
AM_INIT_AUTOMAKE([foreign no-dependencies no-dist])
AC_CONFIG_SRCDIR([problem01.cpp])

# Checks for programs.
AC_PROG_CXX

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_CHECK_HEADER_STDBOOL

# Checks for library functions.

AC_OUTPUT([Makefile])
