#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([ex01], [1.0], [perillaroc@gmail.com])
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([p01.cpp])
AC_CONFIG_SRCDIR([p02.cpp])

# Checks for programs.
AC_PROG_CXX

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT(Makefile)
